add doc string to the black-jack function

--- a/black_jack.ipynb
+++ b/black_jack.ipynb
@@ -8,6 +8,9 @@
    "outputs": [],
    "source": [
     "def lets_play_black_jack():\n",
+    "    \"\"\"\n",
+    "    We use this function to play a game of black jack\n",
+    "    \"\"\"\n",
     "    import random\n",
     "\n",
     "    intention = input(\"Do you want to play a game of blac jack? type 'y' or 'n'.\")\n",
