added more details to the black-jack function docstring

--- a/black_jack.ipynb
+++ b/black_jack.ipynb
@@ -10,6 +10,7 @@
     "def lets_play_black_jack():\n",
     "    \"\"\"\n",
     "    We use this function to play a game of black jack\n",
+    "    To play the game, just call the function and enjoy the game.\n",
     "    \"\"\"\n",
     "    import random\n",
     "\n",
