blackjack condition and ace replacement cases are added

--- a/black_jack.ipynb
+++ b/black_jack.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "13d71fde",
    "metadata": {},
    "outputs": [],
@@ -23,6 +23,10 @@
     "        #you start with having two cards\n",
     "        user_cards = random.choices(card_deck, k = 2)\n",
     "        print(f\"your cards are {user_cards}\")\n",
+    "        if 10 in user_cards and 11 in user_cards:\n",
+    "            print(\"You have got an black jack. You won\")\n",
+    "            print(\"==\" * 30)\n",
+    "            continue\n",
     "        \n",
     "        #now let's give dealers her cards\n",
     "        dealer_cards = random.choices(card_deck, k = 2)\n",
@@ -33,17 +37,27 @@
     "            third_card = random.choice(card_deck)\n",
     "            user_cards.append(third_card)\n",
     "            print(f\"now you have {user_cards} list of cards\")\n",
-    "            if sum(user_cards) > 21:\n",
+    "            if sum(user_cards) > 21 and 11 not in user_cards:\n",
     "                print(\"Your deck exceeded 21. You lost the game\")\n",
     "                want_one_more_card = \"n\"\n",
     "                intention = input(\"Do you want to play another round? 'y'/'n'\")\n",
     "                print(\"==\" * 30)\n",
+    "            elif sum(user_cards) > 21 and 11 in user_cards:\n",
+    "                user_cards.remove(11)\n",
+    "                user_cards.append(1)\n",
+    "                print(\"Cause the sum of user cards are more than 21 and we have an ace, we must consider ace to be 1 not 11\")\n",
+    "                print(f\"user hand looks like this {user_cards}\")\n",
+    "                want_one_more_card = input(\"Type 'y' to get another card, type 'n' to pass.\")\n",
     "            else:\n",
     "                want_one_more_card = input(\"Type 'y' to get another card, type 'n' to pass.\")\n",
     "        \n",
     "        if sum(user_cards) > 21:\n",
     "            continue\n",
     "        print(f\"dealer's hand {dealer_cards}\")\n",
+    "        if 10 in dealer_cards and 11 in dealer_cards:\n",
+    "            print(\"The dealer has got a black jack :( You lost \")\n",
+    "            print(\"==\" * 30)\n",
+    "            continue\n",
     "\n",
     "        #if dealer's hand is less than 17, dealer must take another card \n",
     "        dealer_number_of_extra_card_drawn = 0\n",
@@ -52,9 +66,15 @@
     "            print(f\"dealer's hand total is less than 17, dealer has taken {dealer_number_of_extra_card_drawn} more cards till now\")\n",
     "            dealer_next_card = random.choice(card_deck)\n",
     "            dealer_cards.append(dealer_next_card)\n",
+    "            print(f\"after taking one more card, dealer's hand looks like thins {dealer_cards}\")\n",
+    "            if sum(dealer_cards) > 21 and 11 in dealer_cards:\n",
+    "                dealer_cards.remove(11)\n",
+    "                dealer_cards.append(1)\n",
+    "                print(\"Cause the sum of dealer cards are more than 21 and we have an ace, we must consider ace to be 1 not 11\")\n",
+    "                print(f\"dealer hands after ace replacement looks like this {dealer_cards}\")\n",
     "            print(f\"dealer's final hand {dealer_cards}\")\n",
     "        \n",
-    "        if sum(dealer_cards) > 21:\n",
+    "        if sum(dealer_cards) > 21 and 11 not in dealer_cards:\n",
     "            print(\"the sum of dealer's cards is more than 21. You won.\")\n",
     "        else:\n",
     "            print(f\"the sume of user's cards is {sum(user_cards)}\")\n",
@@ -68,6 +88,14 @@
     "        intention = input(\"Do you want to play another round? 'y'/'n'\")\n",
     "        print(\"==\" * 30)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5fc56a9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
