doc string of the coffee machine on day15 is added

--- a/day15/coffee_machine.ipynb
+++ b/day15/coffee_machine.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "def coffee_machine_software():\n",
+    "    \"\"\"This software can be used to monitor the management of the coffee machine\"\"\"\n",
     "    from menu import MENU\n",
     "\n",
     "    resources = {\n",
