second commit of day 17

--- a/day17/quiz-game-start/test.ipynb
+++ b/day17/quiz-game-start/test.ipynb
@@ -20,7 +20,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Q.1: A slug's blood is green. True/False True\n"
+      "Q.1: A slug's blood is green. True/False f\n",
+      "The answer was wrong\n",
+      "12\n",
+      "1\n",
+      "Q.2: The loudest animal is the African Elephant. True/False f\n",
+      "The answer was wrong\n",
+      "12\n",
+      "2\n",
+      "Q.3: Approximately one quarter of human bones are in the feet. True/False f\n",
+      "The answer was wrong\n",
+      "12\n",
+      "3\n",
+      "Q.4: The total surface area of a human lungs is the size of a football pitch. True/False f\n",
+      "The answer was wrong\n",
+      "12\n",
+      "4\n",
+      "Q.5: In West Virginia, USA, if you accidentally hit an animal with your car, you are free to take it home to eat. True/False f\n",
+      "The answer was wrong\n",
+      "12\n",
+      "5\n",
+      "Q.6: In London, UK, if you happen to die in the House of Parliament, you are entitled to a state funeral. True/False f\n",
+      "The answer was wrong\n",
+      "12\n",
+      "6\n",
+      "Q.7: It is illegal to pee in the Ocean in Portugal. True/False f\n",
+      "The answer was wrong\n",
+      "12\n",
+      "7\n",
+      "Q.8: You can lead a cow down stairs but not up stairs. True/False f\n",
+      "The answer was wrong\n",
+      "12\n",
+      "8\n",
+      "Q.9: Google was originally called 'Backrub'. True/False f\n",
+      "The answer was wrong\n",
+      "12\n",
+      "9\n",
+      "Q.10: Buzz Aldrin's mother's maiden name was 'Moon'. True/False f\n",
+      "The answer was wrong\n",
+      "12\n",
+      "10\n",
+      "Q.11: No piece of square dry paper can be folded in half more than 7 times. True/False f\n",
+      "The answer was wrong\n",
+      "12\n",
+      "11\n",
+      "Q.12: A few ounces of chocolate can to kill a small dog. True/False f\n",
+      "The answer was wrong\n",
+      "12\n",
+      "12\n",
+      "We have no more questions to ask\n"
      ]
     }
    ],
@@ -31,8 +79,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "eb8a4a04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(question_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "43acedc8",
+   "id": "6caa0a6b",
    "metadata": {},
    "outputs": [],
    "source": []
