the final changes to the quiz game

--- a/day17/quiz-game-start/test.ipynb
+++ b/day17/quiz-game-start/test.ipynb
@@ -21,54 +21,81 @@
      "output_type": "stream",
      "text": [
       "Q.1: A slug's blood is green. True/False f\n",
-      "The answer was wrong\n",
-      "12\n",
-      "1\n",
+      "The answer is wrong\n",
+      "Your score is 0 / 1\n",
+      "the right answer to the question A slug's blood is green. is true and your answer was f\n",
+      "\n",
+      "\n",
       "Q.2: The loudest animal is the African Elephant. True/False f\n",
-      "The answer was wrong\n",
-      "12\n",
-      "2\n",
+      "The answer is wrong\n",
+      "Your score is 0 / 2\n",
+      "the right answer to the question The loudest animal is the African Elephant. is false and your answer was f\n",
+      "\n",
+      "\n",
       "Q.3: Approximately one quarter of human bones are in the feet. True/False f\n",
-      "The answer was wrong\n",
-      "12\n",
-      "3\n",
+      "The answer is wrong\n",
+      "Your score is 0 / 3\n",
+      "the right answer to the question Approximately one quarter of human bones are in the feet. is true and your answer was f\n",
+      "\n",
+      "\n",
       "Q.4: The total surface area of a human lungs is the size of a football pitch. True/False f\n",
-      "The answer was wrong\n",
-      "12\n",
-      "4\n",
+      "The answer is wrong\n",
+      "Your score is 0 / 4\n",
+      "the right answer to the question The total surface area of a human lungs is the size of a football pitch. is true and your answer was f\n",
+      "\n",
+      "\n",
       "Q.5: In West Virginia, USA, if you accidentally hit an animal with your car, you are free to take it home to eat. True/False f\n",
-      "The answer was wrong\n",
-      "12\n",
-      "5\n",
+      "The answer is wrong\n",
+      "Your score is 0 / 5\n",
+      "the right answer to the question In West Virginia, USA, if you accidentally hit an animal with your car, you are free to take it home to eat. is true and your answer was f\n",
+      "\n",
+      "\n",
       "Q.6: In London, UK, if you happen to die in the House of Parliament, you are entitled to a state funeral. True/False f\n",
-      "The answer was wrong\n",
-      "12\n",
-      "6\n",
+      "The answer is wrong\n",
+      "Your score is 0 / 6\n",
+      "the right answer to the question In London, UK, if you happen to die in the House of Parliament, you are entitled to a state funeral. is false and your answer was f\n",
+      "\n",
+      "\n",
       "Q.7: It is illegal to pee in the Ocean in Portugal. True/False f\n",
-      "The answer was wrong\n",
-      "12\n",
-      "7\n",
+      "The answer is wrong\n",
+      "Your score is 0 / 7\n",
+      "the right answer to the question It is illegal to pee in the Ocean in Portugal. is true and your answer was f\n",
+      "\n",
+      "\n",
       "Q.8: You can lead a cow down stairs but not up stairs. True/False f\n",
-      "The answer was wrong\n",
-      "12\n",
-      "8\n",
+      "The answer is wrong\n",
+      "Your score is 0 / 8\n",
+      "the right answer to the question You can lead a cow down stairs but not up stairs. is false and your answer was f\n",
+      "\n",
+      "\n",
       "Q.9: Google was originally called 'Backrub'. True/False f\n",
-      "The answer was wrong\n",
-      "12\n",
-      "9\n",
-      "Q.10: Buzz Aldrin's mother's maiden name was 'Moon'. True/False f\n",
-      "The answer was wrong\n",
-      "12\n",
-      "10\n",
-      "Q.11: No piece of square dry paper can be folded in half more than 7 times. True/False f\n",
-      "The answer was wrong\n",
-      "12\n",
-      "11\n",
+      "The answer is wrong\n",
+      "Your score is 0 / 9\n",
+      "the right answer to the question Google was originally called 'Backrub'. is true and your answer was f\n",
+      "\n",
+      "\n",
+      "Q.10: Buzz Aldrin's mother's maiden name was 'Moon'. True/False ff\n",
+      "The answer is wrong\n",
+      "Your score is 0 / 10\n",
+      "the right answer to the question Buzz Aldrin's mother's maiden name was 'Moon'. is true and your answer was ff\n",
+      "\n",
+      "\n",
+      "Q.11: No piece of square dry paper can be folded in half more than 7 times. True/False \n",
+      "The answer is wrong\n",
+      "Your score is 0 / 11\n",
+      "the right answer to the question No piece of square dry paper can be folded in half more than 7 times. is false and your answer was \n",
+      "\n",
+      "\n",
       "Q.12: A few ounces of chocolate can to kill a small dog. True/False f\n",
-      "The answer was wrong\n",
-      "12\n",
-      "12\n",
-      "We have no more questions to ask\n"
+      "The answer is wrong\n",
+      "Your score is 0 / 12\n",
+      "the right answer to the question A few ounces of chocolate can to kill a small dog. is true and your answer was f\n",
+      "\n",
+      "\n",
+      "============================================================\n",
+      "You have completed the quiz!!\n",
+      "Your final score is 0 / 12\n",
+      "============================================================\n"
      ]
     }
    ],
@@ -76,35 +103,6 @@
     "quiz_1 = QuizBrain(question_bank)\n",
     "quiz_1.nex_question()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "eb8a4a04",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(question_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6caa0a6b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
